name:          arbitrary
version:       0.1.0.0
license-file:  LICENSE
author:        Vincent
maintainer:    vpark45@gmail.com
category:      Text
build-type:    Simple
cabal-version: >= 1.10

executable arbitrary
  main-is:          Main.hs
  build-depends:    base >= 4.7 && < 5
                  , QuickCheck
  hs-source-dirs:   .
  default-language: Haskell2010
