name:          arbitrary
version:       0.1.0.0
license-file:  LICENSE
author:        Vincent
maintainer:    vpark45@gmail.com
category:      Text
build-type:    Simple
cabal-version: >= 1.10

executable arbitrary
  main-is:          Main.hs
  build-depends:    base >= 4.7 && < 5
                  , QuickCheck
  hs-source-dirs:   .
  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          tests.hs
  hs-source-dirs:   tests
  build-depends:    base
                  , QuickCheck
  default-language: Haksell2010
